[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
[project]
name = "spikeprof"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["SpikeProf*"]

[project.optional-dependencies]
dev = [
    "proton",
    "torch",
    "triton"
    ]